--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,3 +1,12 @@
-<%= render "form" %>
+<p>Student Form</p>
 
-<%= session[:form_params] %>
+<%= form_tag students_path do %>
+
+  <label>First Name:</label>
+  <br><%= text_field_tag :'student[first_name]' %><br>
+
+  <label>Last Name:</label>
+  <br><%= text_field_tag :'student[last_name]' %><br>
+  <%= submit_tag "Submit Student" %>
+
+<% end %>
